# EXStreamTV

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION_REPORT.md  MIGRATION_SUMMARY.md  README.md  alembic.ini  apply_fixes.py  config.example.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  restart.sh  run_turn1_verification.py  run_turn2_verification.py  run_turn3_verification.py  start.sh  stop.sh  test_youtube_streaming.py
.cursor/: mcp.json
EXStreamTV.wiki/: ADR-Channel-Manager-Database.md  AI-Agent-And-Containment.md  AI-Setup.md  API-Reference.md  Advanced-Scheduling.md  Architecture-Diagrams.md  Architecture.md  Build-Progress.md  CI-CD-And-Testing.md  Changelog.md  Channel-Creation-Guide.md  Deployment.md  Distribution.md  Documentation-Changelog.md  EXStreamTV-UI-Architecture.md  EXStreamTV.md  Feature-Flags.md  HDHomeRun-Emulation.md  Hardware-Transcoding.md  Home.md  Installation.md  Invariants.md  Lessons-Learned.md  Local-Media.md  Log-Interpretation.md  MCP-Server.md  Metadata-And-XMLTV.md  Navigation-Guide.md  Observability.md  Onboarding.md  Operational-Guide.md  Pattern-Refactor-Sources.md  Platform-Comparison.md  Platform-Guide.md  Production-Certification.md  Quick-Start.md  Restart-Safety-Model.md  StreamTV-Migration-QuickStart.md  Streaming-Internals.md  Streaming-Stability.md  (+5 more)
EXStreamTVApp/: CHANGELOG.md  Package.swift  README.md  VERSION
archive/: README.md
containers/: CHANGELOG.md  VERSION
distributions/: CHANGELOG.md  VERSION
docs/: ARCHITECTURAL_FIX_SESSION_BOUNDARIES.md  BUILD_PROGRESS.md  CHANGELOG.md  CLOCK_AUTHORITY_VALIDATION_REPORT.md  DETERMINISTIC_PLAYOUT_IMPLEMENTATION.md  ERSATZTV_TUNARR_FEATURE_PARITY.md  EXECUTIVE_PROJECT_STATUS_REPORT.md  EXECUTIVE_TECHNICAL_ARCHITECTURE_AUDIT.md  EXStreamTV-UI-Architecture.md  FEATURE_FLAGS.md  FFMPEG_APPLE_SILICON_OPTIMIZATION.md  IMPORT_TIMEOUT_TROUBLESHOOTING.md  INFINITE_RESTART_ROOT_CAUSE_ANALYSIS.md  INTEGRATION_PLAN.md  INVARIANTS.md  IPTV_STREAMING_HARDENING_PLAN.md  IPTV_STREAMING_VALIDATION_CHECKLIST.md  LESSONS_LEARNED.md  METADATA_OBSERVABILITY_REPORT.md  OBSERVABILITY.md  OPERATIONAL_GUIDE.md  PLATFORM_GUIDE.md  PLAYBACK_VALIDATION_REPORT.md  PRODUCTION_HARDENING_PLAN_EXECUTION_STATUS.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_ROLLOUT_STRATEGY.md  QA_ERROR_REPORT_AND_DASHBOARD.md  QA_FIX_EMPTY_CHANNELS_REPORT.md  README.md  RESIDUAL_RISK_ASSESSMENT.md  REVERSE_PROXY_SETUP.md  STREAMING_ARCHITECTURE_ISOLATION.md  StreamTV_Migration_QuickStart.md  StreamTV_Schema_Mapping.md  TUNER_CONNECTIVITY_STATUS_REPORT.md  VERSION  WIKI_UPLOAD.md  qa_fix_empty_channels_latest.json
exstreamtv/: VERSION  __init__.py  __main__.py  config.py  constants.py  main.py
frontend/: README.md  index.html  package-lock.json  (+3 more)
(+822 files in other folders)
